Creating registration form for both Patient & Doctor model